# datadumper

./: .gitignore  Makefile  pyproject.toml
datadumper/: __init__.py  datadumper.py  dd.py
tests/: dd.py  test_datadumper.py
tmp/test_dataframe_decorator/: 00_func1.csv  01_func2.csv
tmp/test_json_decorator/: 00_func2.json  01_func1.json
